--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,4 +1,13 @@
-<h3>Im the app component</h3>
-<hr />
-<app-server> </app-server>
-<app-servers> </app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>Im the app component</h3>
+      <hr />
+      <app-server> </app-server>
+      <div app-servers></div>
+      <div class="app-servers"></div>
+      <app-success-alert></app-success-alert>
+      <app-warning-alert></app-warning-alert>
+    </div>
+  </div>
+</div>
