--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,1 +1,6 @@
-<p>{{ "server" }} Server with ID: {{ serverId }} is {{ getServerStatus() }}</p>
+<p
+  [ngStyle]="{ backgroundColor: getColor() }"
+  [ngClass]="{ online: serverStatus === 'online' }"
+>
+  {{ "server" }} Server with ID: {{ serverId }} is {{ getServerStatus() }}
+</p>
