--- a/number-filter/src/app/app.component.html
+++ b/number-filter/src/app/app.component.html
@@ -19,7 +19,20 @@
           </li>
         </div>
 
-        <div *ngIf="!onlyOdd">
+        <ng-template [ngIf]="!onlyOdd">
+          <li
+            [ngClass]="{ even: number % 2 !== 0 }"
+            [ngStyle]="{
+              backgroundColor: number % 2 !== 0 ? 'yellow' : 'transparent'
+            }"
+            class="list-group-item"
+            *ngFor="let number of evenNumbers"
+          >
+            {{ number }}
+          </li>
+        </ng-template>
+
+        <div *appUnless="onlyOdd">
           <li
             [ngClass]="{ even: number % 2 !== 0 }"
             [ngStyle]="{
@@ -32,13 +45,18 @@
           </li>
         </div>
       </ul>
-      <ng-template [ngIf]="onlyOdd">
-        <p>Only odd</p>
-      </ng-template>
+
       <p appBasicHighlight>Style with basic directive</p>
       <p [appBetterHighlight] highlightColor="red" defaultColor="yellow">
         Style with basic directive
       </p>
+
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchDefault="100000">Value is Default</p>
+      </div>
     </div>
   </div>
 </div>
