--- a/recipes/src/app/header/header.component.html
+++ b/recipes/src/app/header/header.component.html
@@ -25,7 +25,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
+        <li appDropdown class="dropdown">
           <a href="#" class="dropdown-toggle"
             >Manage <span class="caret"></span
           ></a>
