--- a/routing/src/app/servers/servers.component.html
+++ b/routing/src/app/servers/servers.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
-        [routerLink]="['/servers', 5, 'edit']"
+        [routerLink]="['/servers', server.id]"
         [queryParams]="{ allowEdit: '1' }"
         fragment="loading"
         class="list-group-item"
@@ -13,9 +13,6 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <button class="btn btn-primary">Reload</button>
-    <app-edit-server></app-edit-server>
-    <hr />
-    <app-server></app-server>
+    <router-outlet></router-outlet>
   </div>
 </div>
