--- a/recipes/src/app/app.component.html
+++ b/recipes/src/app/app.component.html
@@ -3,10 +3,7 @@
   <div class="row">
     <div class="col-md-12">
       <h2>Recipes</h2>
-      <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
-      <app-shopping-list
-        *ngIf="loadedFeature === 'shopping-list'"
-      ></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
