--- a/recipes/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipes/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,9 +20,13 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#" (click)="onAddToShoppingList()">Shopping list</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li>
+          <a style="cursor: pointer;" (click)="onAddToShoppingList()"
+            >Shopping list</a
+          >
+        </li>
+        <li><a style="cursor: pointer;">Edit Recipe</a></li>
+        <li><a style="cursor: pointer;">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
