--- a/observables/src/app/app.component.html
+++ b/observables/src/app/app.component.html
@@ -11,6 +11,7 @@
       </a>
     </div>
   </div>
+  <p *ngIf="userActivated">Activated!</p>
   <hr />
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
