--- a/concepts/http-requests/src/app/app.component.html
+++ b/concepts/http-requests/src/app/app.component.html
@@ -59,7 +59,11 @@
           <p>{{ post.content }}</p>
         </li>
       </ul>
-      <p *ngIf="isFetching">Loadiing...</p>
+      <p *ngIf="isFetching && !error">Loadiing...</p>
+      <div class="alert alert-danger" *ngIf="error">
+        <h1>An Error Ocurred!</h1>
+        <p>{{ error }}</p>
+      </div>
     </div>
   </div>
 </div>
