--- a/recipes/src/app/header/header.component.html
+++ b/recipes/src/app/header/header.component.html
@@ -31,10 +31,10 @@
           ></a>
           <ul class="dropdown-menu">
             <li>
-              <a routerLink="/">Save Data</a>
+              <a routerLink="/" (click)="onSaveData()">Save Data</a>
             </li>
             <li>
-              <a routerLink="/">Fetch Data</a>
+              <a routerLink="/" (click)="fetchRecipes()">Fetch Data</a>
             </li>
           </ul>
         </li>
