--- a/recipes/src/app/header/header.component.html
+++ b/recipes/src/app/header/header.component.html
@@ -34,7 +34,7 @@
               <a routerLink="/" (click)="onSaveData()">Save Data</a>
             </li>
             <li>
-              <a routerLink="/" (click)="fetchRecipes()">Fetch Data</a>
+              <a routerLink="/" (click)="onFetchData()">Fetch Data</a>
             </li>
           </ul>
         </li>
