--- a/recipes/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipes/src/app/recipes/recipe-list/recipe-list.component.html
@@ -3,11 +3,12 @@
     <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
+<hr />
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let recipe of recipes; let i = index"
-      [recipe]="recipe"
+      *ngFor="let recipeEl of recipes; let i = index"
+      [recipe]="recipeEl"
       [index]="i"
     ></app-recipe-item>
   </div>
