--- a/recipes/src/app/header/header.component.html
+++ b/recipes/src/app/header/header.component.html
@@ -17,18 +17,21 @@
       (window:resize)="collapsed = true"
     >
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
           <a routerLink="/recipes">Recipes</a>
         </li>
         <li routerLinkActive="active">
           <a routerLink="/shopping-list">Shopping List</a>
         </li>
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" *ngIf="!isAuthenticated">
           <a routerLink="/auth">Authenticate</a>
         </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li appDropdown class="dropdown">
+      <ul class="nav navbar-nav navbar-right" *ngIf="isAuthenticated">
+        <li>
+          <a href="">Logout</a>
+        </li>
+        <li appDropdown class="dropdown" *ngIf="isAuthenticated">
           <a routerLink="" class="dropdown-toggle"
             >Manage <span class="caret"></span
           ></a>
