--- a/recipes/src/app/header/header.component.html
+++ b/recipes/src/app/header/header.component.html
@@ -29,7 +29,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right" *ngIf="isAuthenticated">
         <li>
-          <a href="">Logout</a>
+          <a href="" (click)="onLogout()">Logout</a>
         </li>
         <li appDropdown class="dropdown" *ngIf="isAuthenticated">
           <a routerLink="" class="dropdown-toggle"
